[package]
name = "ulang"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
thiserror = "1.0.64"
miette = { version = "7" }
anyhow = { version = "1.0.89", optional = true }

[features]
build-binary = ["clap", "anyhow", "miette/fancy"]

[[bin]]
name = "ulang_driver"
test = false
bench = false
required-features = ["build-binary"]
